examples/test/testpolicy8784.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8784
  namespace: namespace201
spec:
  podSelector:
    matchLabels:
      key48: value37
      key45: value43
      key28: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value2
      podSelector:
        matchLabels:
          key48: value46
          key4: value2
          key0: value20
